--- a/src/style.css
+++ b/src/style.css
@@ -64,9 +64,19 @@ h1, h2, h3, h4, h5, h6 {
   overflow-y: auto;
   margin: 15px auto;
   width: 80%;
+  opacity: 0;
   -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  animation: show 2s ease 1s forwards;
+}
+@keyframes show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 @media (max-width: 768px) {
   .overflow {
@@ -128,6 +138,15 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   left: 0;
   margin: 15px;
+  animation: show 2s ease 1s forwards;
+}
+@keyframes show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
