--- a/src/style.scss
+++ b/src/style.scss
@@ -68,10 +68,16 @@ h1,h2,h3,h4,h5,h6{
   overflow-y: auto;
   margin: $indent auto;
   width: 80%;
-
+  opacity: 0;
   -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+
+  animation: show 2s ease 1s forwards;
+  @keyframes show {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
 
   @media (max-width: 768px){
     width: 90%;
@@ -135,9 +141,34 @@ h1,h2,h3,h4,h5,h6{
   bottom: 0;
   left: 0;
   margin: $indent;
-  //animation: show 2s ease 1s forwards;
-  //@keyframes show {
-  //  from {opacity: 0;}
-  //  to {opacity: 1;}
-  //}
+  animation: show 2s ease 1s forwards;
+  @keyframes show {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
 }
+
+
+//* {
+//  scrollbar-width: thin;
+//  scrollbar-color: rgb(132, 132, 132);
+//  &:hover,
+//  {
+//    scrollbar-color: linear-gradient(cyan, magenta);;
+//  }
+//}
+
+//::-webkit-scrollbar {
+//  width: 1em;
+//  height: 1em;
+//  background-color: rgb(38, 38, 38);
+//}
+//
+//::-webkit-scrollbar-thumb {
+//  background-color: rgb(132, 132, 132);
+//  border-radius: 1em;
+//  &:hover
+//  {
+//    background: linear-gradient(cyan, magenta);
+//  }
+//}
