--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ body, html {
 }
 
 body {
-  background: linear-gradient(#313131, white) no-repeat fixed;
+  background: radial-gradient(#ffffff, #a5a5a5) no-repeat fixed;
   font-family: "Montserrat", sans-serif;
   font-weight: 800;
   -webkit-touch-callout: none;
@@ -19,6 +19,15 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+nav {
+  font-size: 50px;
+}
+@media (max-width: 768px) {
+  nav {
+    font-size: 25px;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -38,6 +47,15 @@ h1, h2, h3, h4, h5, h6 {
   box-shadow: 0 1px 0 0 #00aeff !important;
 }
 
+.progress {
+  margin: 0;
+  background-color: #ffffff;
+}
+
+.indeterminate {
+  background-color: #ff8b00 !important;
+}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -45,13 +63,13 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
   justify-items: center;
   width: 80%;
-  margin: 15px auto;
+  margin: 30px auto;
   padding: 15px 30px;
   border-radius: 5px;
   background: #f6f6f6;
-  -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-  -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -webkit-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+  box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 @media (max-width: 768px) {
   .form {
@@ -65,9 +83,9 @@ h1, h2, h3, h4, h5, h6 {
   margin: 15px auto;
   width: 80%;
   opacity: 0;
-  -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-  -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -webkit-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+  box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
   animation: show 2s ease 1s forwards;
 }
 @keyframes show {
