--- a/src/style.scss
+++ b/src/style.scss
@@ -14,7 +14,7 @@ body,html{
 
 body
 {
-  background: linear-gradient(#313131, white) no-repeat fixed;
+  background: radial-gradient( #ffffff, #a5a5a5) no-repeat fixed;
   font-family: 'Montserrat', sans-serif;
   font-weight: 800;
   -webkit-touch-callout: none;
@@ -23,7 +23,13 @@ body
   -ms-user-select: none;
    user-select: none;
 }
-
+nav
+{
+  font-size: 50px;
+  @media (max-width: 768px) {
+    font-size: 25px;
+  }
+}
 h1,h2,h3,h4,h5,h6{
   margin: $indent;
   text-align: center;
@@ -39,7 +45,14 @@ h1,h2,h3,h4,h5,h6{
   border-bottom: 1px solid $basic_color !important;
   box-shadow: 0 1px 0 0 $basic_color !important;
 }
-
+.progress{
+  margin: 0;
+  background-color: #ffffff;
+}
+.indeterminate
+{
+  background-color: #ff8b00 !important;;
+}
 .form
 {
   display: flex;
@@ -48,14 +61,14 @@ h1,h2,h3,h4,h5,h6{
   justify-content: center;
   justify-items: center;
   width: 80%;
-  margin: $indent auto;
+  margin: $indent*2 auto;
   padding: $indent $indent*2;
   border-radius: 5px;
   background: rgb(246, 246, 246);
 
-  -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-  -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -webkit-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+  box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
 
   @media (max-width: 768px){
     width: 90%;
@@ -69,9 +82,9 @@ h1,h2,h3,h4,h5,h6{
   margin: $indent auto;
   width: 80%;
   opacity: 0;
-  -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-  -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -webkit-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+  box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
 
   animation: show 2s ease 1s forwards;
   @keyframes show {
