--- a/src/style.scss
+++ b/src/style.scss
@@ -215,14 +215,40 @@ h1,h2,h3,h4,h5,h6{
     to {opacity: 1;}
   }
 }
-
+.flex-area
+{
+  display: flex;
+  justify-content: space-between;
+  justify-self: center;
+  justify-items: center;
+  margin: 0;
+}
+.animation
+{
+  opacity: 0;
+  animation: show 1s ease 0s forwards;
+  @keyframes show {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+}
+.inputs
+{
+  min-height: 105px;
+  width: 95%;
+  margin-right: $indent*2;
+  @media (max-width: 768px) {
+    width: 80%
+  }
+}
 .add-phrases
 {
-  position: absolute;
-  top: 22%;
-  left: 7px;
-  z-index: 1;
-  transition: 0.5s;
+  margin: auto;
+  //position: absolute;
+  //top: 22%;
+  //left: 7px;
+  //z-index: 1;
+  //transition: 0.5s;
   //&:focus, &:hover {opacity: 1;}
   //@media (max-width: 768px){
   //  opacity: 1;
