--- a/src/style.scss
+++ b/src/style.scss
@@ -17,7 +17,7 @@ $maxWidth: 1280;
 body,html{
   height: 100%;
   width: 100%;
-  overflow: auto;
+  overflow-x: hidden;
 }
 
 body
@@ -158,7 +158,7 @@ h1,h2,h3,h4,h5,h6{
   border-radius: 5px;
   border: 2px solid black;
   margin: auto;
-  @media (max-width: 768px){;
+  @media (max-width: 768px){
     font-size: 12px;
   }
 }
