--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ body, html {
 
 body {
   background: radial-gradient(#ffffff, #a5a5a5) no-repeat fixed;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 800;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -24,7 +24,6 @@ body {
 nav {
   font-size: 50px;
 }
-
 @media (max-width: 768px) {
   nav {
     font-size: 25px;
@@ -35,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 15px;
   text-align: center;
   color: #00aeff;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .input-field textarea:focus + label {
@@ -44,15 +43,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .input-field textarea:focus {
   border-bottom: 1px solid #00aeff !important;
-  -webkit-box-shadow: 0 1px 0 0 #00aeff !important;
-          box-shadow: 0 1px 0 0 #00aeff !important;
+  box-shadow: 0 1px 0 0 #00aeff !important;
 }
 
 .modal.modal-fixed-footer {
   border-radius: 5px;
   height: 40%;
 }
-
 @media (max-width: 768px) {
   .modal.modal-fixed-footer {
     height: 50%;
@@ -74,20 +71,14 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar_text {
   font-size: calc(20px + 10 * ((100vw - 320px) / 960));
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   vertical-align: center;
   color: white;
   margin: 0;
 }
 
 .info {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 80%;
   margin: 15px auto;
@@ -96,10 +87,10 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 5px;
   text-align: center;
   -webkit-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
   box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
   font-size: calc(20px + 10 * ((100vw - 320px) / 960));
 }
-
 @media (max-width: 768px) {
   .info {
     width: 90%;
@@ -107,17 +98,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .form {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   justify-self: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   justify-items: center;
   width: 80%;
   margin: 30px auto;
@@ -125,9 +109,9 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 5px;
   background: #f6f6f6;
   -webkit-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
   box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
-
 @media (max-width: 768px) {
   .form {
     width: 90%;
@@ -135,17 +119,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .form2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   justify-self: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   justify-items: center;
   width: 100%;
   margin: auto;
@@ -160,20 +137,10 @@ h1, h2, h3, h4, h5, h6 {
   width: 80%;
   opacity: 0;
   -webkit-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
   box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
-  -webkit-animation: show 2s ease 0s forwards;
-          animation: show 2s ease 0s forwards;
+  animation: show 2s ease 0s forwards;
 }
-
-@-webkit-keyframes show {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 @keyframes show {
   from {
     opacity: 0;
@@ -182,7 +149,6 @@ h1, h2, h3, h4, h5, h6 {
     opacity: 1;
   }
 }
-
 @media (max-width: 768px) {
   .overflow {
     width: 90%;
@@ -196,7 +162,6 @@ h1, h2, h3, h4, h5, h6 {
   border: 2px solid black;
   margin: auto;
 }
-
 @media (max-width: 768px) {
   .table {
     font-size: 12px;
@@ -206,24 +171,19 @@ h1, h2, h3, h4, h5, h6 {
 .grid {
   position: relative;
   width: 100%;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 2fr 1fr 3fr 2fr 2fr 2fr;
-      grid-template-columns: 2fr 1fr 3fr 2fr 2fr 2fr;
+  grid-template-columns: 2fr 1fr 3fr 2fr 2fr 2fr;
 }
 
 .second {
-  -ms-grid-columns: 2fr 1fr 9fr;
-      grid-template-columns: 2fr 1fr 9fr;
+  grid-template-columns: 2fr 1fr 9fr;
   background-color: azure;
 }
 
 .sub {
   width: 100%;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 3fr 2fr 2fr 2fr;
-      grid-template-columns: 3fr 2fr 2fr 2fr;
+  grid-template-columns: 3fr 2fr 2fr 2fr;
   background-color: #d2d2d2;
 }
 
@@ -234,15 +194,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .el {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   margin: auto;
   padding: 5%;
   border: 2px solid black;
@@ -256,10 +210,8 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   left: 0;
   margin: 15px;
-  -webkit-animation: show 2s ease 1s forwards;
-          animation: show 2s ease 1s forwards;
+  animation: show 2s ease 1s forwards;
 }
-
 @keyframes show {
   from {
     opacity: 0;
@@ -270,12 +222,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .flex-area {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   justify-self: center;
   justify-items: center;
   margin: 0;
@@ -283,10 +231,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .animation {
   opacity: 0;
-  -webkit-animation: show 1s ease 0s forwards;
-          animation: show 1s ease 0s forwards;
+  animation: show 1s ease 0s forwards;
 }
-
 @keyframes show {
   from {
     opacity: 0;
@@ -301,7 +247,6 @@ h1, h2, h3, h4, h5, h6 {
   width: 95%;
   margin-right: 30px;
 }
-
 @media (max-width: 768px) {
   .inputs {
     width: 80%;
@@ -313,12 +258,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   justify-self: center;
   justify-items: center;
   background: #fafafa;
@@ -328,4 +269,5 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: -150px;
   bottom: 15px;
 }
+
 /*# sourceMappingURL=style.css.map */
