--- a/src/style.css
+++ b/src/style.css
@@ -63,10 +63,12 @@ h1, h2, h3, h4, h5, h6 {
 .progress {
   margin: 0;
   background-color: #ffffff;
+  z-index: 2;
 }
 
 .indeterminate {
   background-color: #ff8b00 !important;
+  z-index: 9999 !important;
 }
 
 .navbar_text {
@@ -206,7 +208,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .button {
   position: fixed;
-  z-index: 2;
   bottom: 0;
   left: 0;
   margin: 15px;
