--- a/src/style.scss
+++ b/src/style.scss
@@ -65,10 +65,12 @@ h1,h2,h3,h4,h5,h6{
 .progress{
   margin: 0;
   background-color: #ffffff;
+  z-index: 2;
 }
 .indeterminate
 {
   background-color: #ff8b00 !important;
+  z-index: 9999 !important;
 }
 .navbar_text
 {
@@ -129,6 +131,7 @@ h1,h2,h3,h4,h5,h6{
 }
 .overflow
 {
+  //z-index: -1;
   position: relative;
   border-radius: 5px;
   overflow-y: auto;
@@ -205,7 +208,6 @@ h1,h2,h3,h4,h5,h6{
 .button
 {
   position: fixed;
-  z-index: 2;
   bottom: 0;
   left: 0;
   margin: $indent;
