--- a/src/style.css
+++ b/src/style.css
@@ -68,7 +68,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .indeterminate {
   background-color: #ff8b00 !important;
-  z-index: 9999 !important;
 }
 
 .navbar_text {
@@ -269,6 +268,44 @@ h1, h2, h3, h4, h5, h6 {
   left: 50%;
   margin-left: -150px;
   bottom: 15px;
+}
+
+.accept {
+  display: flex;
+  position: relative;
+  justify-content: left;
+  margin-bottom: 15px;
+}
+@media (max-width: 768px) {
+  .accept {
+    flex-direction: column;
+  }
+}
+.accept .buttons {
+  display: flex;
+  justify-content: space-between;
+}
+.accept .buttons * {
+  margin: 0 30px 0 0;
+  width: 150px;
+}
+@media (max-width: 768px) {
+  .accept .buttons * {
+    width: 100px;
+    margin: auto;
+  }
+}
+.accept label {
+  margin: auto 0 auto 0;
+}
+.accept label [type=checkbox].filled-in:checked + span:after {
+  border: 2px solid black;
+  background-color: #00aeff;
+}
+@media (max-width: 768px) {
+  .accept label {
+    margin: 15px auto 0;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
